# mindmap-writer

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
src/mindmap_writer/: __main__.py  cli.py  config.py  graph.py  llm.py  models.py  pdf.py  prompts.py  utils.py
src/mindmap_writer/nodes/: check_missing.py  detect_chapters.py  extract_content.py  extract_headings.py  format_markdown.py  review_structure.py  write_output.py
